--- a/TGE/Chat2.0-main/public/index.html
+++ b/TGE/Chat2.0-main/public/index.html
@@ -11,12 +11,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+
+
+
+
     <form id="chat">
+
+        
         <input type="text" name="username" placeholder="Digite seu usuário">
         <div class="menssage"></div>
-        <input type="text" name="menssage" placeholder="Digite sua menssagem">
-        <button type="submit">Enviar</button>
-
+        
+        <div id="divChat">
+            <input type="text" name="menssage" id="inputtexto" placeholder="Digite sua menssagem">
+            <button type="submit" id="botaoChat">Enviar</button>
+        </div>
 
     </form>
 <script type="text/javascript">
@@ -24,7 +34,7 @@
     var socket = io('http://localhost:3000');
 
     function renderMenssage(menssage){
-        $('.menssage').append('<div class="menssages"><strong>'+menssage.autor+'</strong>: '+menssage.menssage+'</div>');
+        $('.menssage').append('<div class="menssages"><strong>'+menssage.autor+'</strong> '+"<br>"+menssage.menssage+'</div>');
     }
 
     socket.on('previousMenssage', function(menssages){
