--- a/TGE/Chat2.0-main/public/index.html
+++ b/TGE/Chat2.0-main/public/index.html
@@ -11,17 +11,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-
-
-
-
     <form id="chat">
-
         
-        <input type="text" name="username" placeholder="Digite seu usuário">
-        <div class="menssage"></div>
+        <div class="menssage">
+            <input type="text" name="username" placeholder="Digite seu usuário">    
+        </div>
         
         <div id="divChat">
             <input type="text" name="menssage" id="inputtexto" placeholder="Digite sua menssagem">
@@ -34,7 +28,7 @@
     var socket = io('http://localhost:3000');
 
     function renderMenssage(menssage){
-        $('.menssage').append('<div class="menssages"><strong>'+menssage.autor+'</strong> '+"<br>"+menssage.menssage+'</div>');
+        $('.menssage').append('<div class="menssages"><img src="./imagens/fortnite.jpg" alt="" class="imagePerfil"><div class="nomeTexto"><div class="nick"><strong>'+menssage.autor+'</strong></div>'+menssage.menssage+'</div></div>');
     }
 
     socket.on('previousMenssage', function(menssages){
